[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/Player/ShotGun/Shotgun.png" type="Texture" id=1]
[ext_resource path="res://Common/UI/GunUI/GunConfigUI/GunConfigUI.gd" type="Script" id=2]

[node name="GunConfigUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 130.0
margin_right = -180.0
margin_bottom = -130.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.137255, 0.454902 )

[node name="MenuTitle" type="Label" parent="."]
margin_left = 15.0
margin_top = 16.0
margin_right = 139.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
text = "GunConfiguration:"

[node name="TempGunSprite" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -112.0
margin_right = -177.0
margin_bottom = -101.0
rect_scale = Vector2( 15, 15 )
texture = ExtResource( 1 )

[node name="AttributeUpgrades" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -80.0
margin_right = 142.0
margin_bottom = -40.0

[node name="AULabel" type="Label" parent="AttributeUpgrades"]
margin_right = 125.0
margin_bottom = 14.0
text = "Attribute Upgrades:"

[node name="AttributeUpgradeSlots" type="HBoxContainer" parent="AttributeUpgrades"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 18.0

[node name="BarrelUpgrade" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.0
margin_top = 35.0
margin_right = -30.0
margin_bottom = 75.0

[node name="BULabel" type="Label" parent="BarrelUpgrade"]
margin_right = 104.0
margin_bottom = 14.0
text = "Barrel Augment:"

[node name="Projectile" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.0
margin_top = 212.0
margin_right = -30.0
margin_bottom = 252.0

[node name="PLabel" type="Label" parent="Projectile"]
margin_right = 104.0
margin_bottom = 14.0
text = "Projectile:"
